add portfolio and header

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <nav class="header__nav container">
           <p class="header__route">
             <span class="header__route--line"></span>
-            HOME
+            CONTACT
           </p>
           <a href="./index.html" class="header__logo">
             <svg
