--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <script defer src="./header.js"></script>
   </head>
   <body>
-    <main>
+    <main class="about">
       <header class="header">
         <div class="overlay"></div>
         <nav class="header__nav container">
@@ -51,6 +51,47 @@
           ><a href="./contact.html">Contact</a>
         </div>
       </header>
+      <section class="about__leaders container">
+        <h3 class="about__leaders_title">The Leaders</h3>
+        <div class="leaders">
+          <div class="leaders__card">
+            <img
+              class="leaders__image"
+              src="./assets/about/desktop/avatar-jake.jpg"
+              alt="Jake"
+            />
+            <h4 class="leaders__name">Jake Richards</h4>
+            <p class="leaders__title">Chief Architect</p>
+          </div>
+          <div class="leaders__card">
+            <img
+              class="leaders__image"
+              src="./assets/about/desktop/avatar-thompson.jpg"
+              alt="Jake"
+            />
+            <h4>Thompson Smith</h4>
+            <p class="leaders__title">Head of Finance</p>
+          </div>
+          <div class="leaders__card">
+            <img
+              class="leaders__image"
+              src="./assets/about/desktop/avatar-jackson.jpg"
+              alt="Jake"
+            />
+            <h4>Jackson Rourke</h4>
+            <p class="leaders__title">Lead Designer</p>
+          </div>
+          <div class="leaders__card">
+            <img
+              class="leaders__image"
+              src="./assets/about/desktop/avatar-maria.jpg"
+              alt="Jake"
+            />
+            <h4>Maria Simpson</h4>
+            <p class="leaders__title">Senior Architect</p>
+          </div>
+        </div>
+      </section>
       <footer class="footer">
         <div class="footer__container">
           <div class="footer__logo">
