add heritage section

--- a/about.html
+++ b/about.html
@@ -51,6 +51,29 @@
           ><a href="./contact.html">Contact</a>
         </div>
       </header>
+      <section class="about__heritage container">
+        <div class="heritage">
+          <h3 class="heritage__header">Our Heritage</h3>
+          <p>
+            Founded in 2007, we started as a trio of architects. Our
+            complimentary skills and relentless attention to detail turned Arch
+            into one of the most sought after boutique firms in the country.
+          </p>
+        </br>
+          <p>
+            Speciliazing in Urban Design allowed us to focus on creating
+            exceptional structures that live in harmony with their surroundings.
+            We consider every detail from every surrounding element to inform
+            our designs.
+          </p>
+        </br>
+          <p>
+            Our small team of world-class professionals provides input on every
+            project.
+          </p>
+        </div>
+        <img class="heritage__image" src="./assets/about/desktop/image-heritage.jpg" alt="">
+      </section>
       <section class="about__leaders container">
         <h3 class="about__leaders_title">The Leaders</h3>
         <div class="leaders">
