add hero section

--- a/about.html
+++ b/about.html
@@ -51,6 +51,25 @@
           ><a href="./contact.html">Contact</a>
         </div>
       </header>
+      <section class="hero">
+        <div class="hero__img">
+          <picture>
+            <source
+            media="(min-width: 1200px)"
+            srcset="./assets/about/desktop/image-hero.jpg"/>
+            <source
+              media="(min-width: 768px)"
+              srcset="./assets/about/tablet/image-hero.jpg"/>
+            <img src="./assets/about/mobile/image-hero.jpg" alt="">
+          </picture>
+          <span class="overlay"></span>
+        </div>
+        <div class="hero__content">
+          <h1 class="hero__header">About</h1>
+          <h3 class="hero__title">Your team of professionals</h3>
+          <p class="hero__text">Our small team of world-class professionals will work with you every step of the way. Strong relationships are at the core of everything we do. This extends to the relationship our projects have with their surroundings.</p>
+        </div>
+      </section>
       <section class="about__heritage container">
         <div class="heritage">
           <h3 class="heritage__header">Our Heritage</h3>
