--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,31 @@
           ><a href="./contact.html">Contact</a>
         </div>
       </header>
+      <section class="hero">
+        <div class="hero__img">
+          <picture>
+            <source
+              media="(min-width: 1200px)"
+              srcset="./assets/contact/desktop/image-hero.jpg"
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="./assets/contact/tablet/image-hero.jpg"
+            />
+            <img src="./assets/contact/mobile/image-hero.jpg" alt="" />
+          </picture>
+          <span class="overlay"></span>
+        </div>
+        <div class="hero__content">
+          <h1 class="hero__header">Contact</h1>
+          <h3 class="hero__title">Tell us about your project</h3>
+          <p class="hero__text">
+            We’d love to hear more about your project. Please, leave a message
+            below or give us a call. We have two offices, one in Texas and one
+            in Tennessee. If you find yourself nearby, come say hello!
+          </p>
+        </div>
+      </section>
       <footer class="footer">
         <div class="footer__container">
           <div class="footer__logo">
