add contact map

--- a/contact.html
+++ b/contact.html
@@ -90,6 +90,19 @@
         </svg></p>
       </div>
     </section>
+    <section class="contact__map">
+      <picture>
+        <source
+            media="(min-width:1200px)"
+            srcset="./assets/contact/desktop/image-map.png"
+          />
+          <source
+            media="(min-width:768px)"
+            srcset="./assets/contact/tablet/image-map.png"
+          />
+        <img src="./assets/contact/mobile/image-map.png" alt="map">
+      </picture>
+    </section>
     <footer class="footer">
       <div class="footer__container">
         <div class="footer__logo">
