add featured section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,110 @@
           ><a href="./contact.html">Contact</a>
         </div>
       </header>
+      <section class="portfolio container featured">
+        <div class="featured__header">
+          <h3>Featured</h3>
+          <a class="button" href="./portfolio.html">
+            <p>See All</p>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 18"
+              width="24"
+              height="18"
+            >
+              <g
+                fill="none"
+                fill-rule="evenodd"
+                stroke="#FFFFFF"
+                stroke-width="2"
+              >
+                <path d="M15 1l9 9-9 9M0 10h24" />
+              </g>
+            </svg>
+          </a>
+        </div>
+        <div class="portfolio__card featured__card">
+          <picture>
+            <source
+              media="(min-width:1200px)"
+              srcset="./assets/portfolio/desktop/image-del-sol.jpg"
+            />
+            <source
+              media="(min-width:768px)"
+              srcset="./assets/portfolio/tablet/image-del-sol.jpg"
+            />
+            <img
+              src="./assets/portfolio/mobile/image-del-sol.jpg"
+              alt="seraph station"
+            />
+          </picture>
+          <span class="featured__card_label">1</span>
+          <div class="overlay">
+            <h4>Project Del Sol</h4>
+            <p class="overlay__date">January 2016</p>
+          </div>
+        </div>
+        <div class="portfolio__card featured__card">
+          <picture>
+            <source
+              media="(min-width:1200px)"
+              srcset="./assets/portfolio/desktop/image-228b.jpg"
+            />
+            <source
+              media="(min-width:768px)"
+              srcset="./assets/portfolio/tablet/image-228b.jpg"
+            />
+            <img
+              src="./assets/portfolio/mobile/image-228b.jpg"
+              alt="seraph station"
+            />
+          </picture>
+          <span class="featured__card_label">2</span>
+          <div class="overlay">
+            <h4>228B Tower</h4>
+            <p class="overlay__date">April 2015</p>
+          </div>
+        </div>
+        <div class="portfolio__card featured__card">
+          <picture>
+            <source
+              media="(min-width:1200px)"
+              srcset="./assets/portfolio/desktop/image-prototype.jpg"
+            />
+            <source
+              media="(min-width:768px)"
+              srcset="./assets/portfolio/tablet/image-prototype.jpg"
+            />
+            <img
+              src="./assets/portfolio/mobile/image-prototype.jpg"
+              alt="seraph station"
+            />
+          </picture>
+          <span class="featured__card_label">3</span>
+          <div class="overlay">
+            <h4>Le Prototype</h4>
+            <p class="overlay__date">October 2015</p>
+          </div>
+        </div>
+        <a class="button featured__button" href="./portfolio.html">
+          <p>See All</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 18"
+            width="24"
+            height="18"
+          >
+            <g
+              fill="none"
+              fill-rule="evenodd"
+              stroke="#FFFFFF"
+              stroke-width="2"
+            >
+              <path d="M15 1l9 9-9 9M0 10h24" />
+            </g>
+          </svg>
+        </a>
+      </section>
       <footer class="footer">
         <div class="footer__container">
           <div class="footer__logo">
