add welcome section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <title>Arch</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -41,6 +42,21 @@
         <a href="./portfolio.html">Portfolio</a><a href="./about.html">About Us</a><a href="./contact.html">Contact</a>
       </div>
     </header>
+    <div class="welcome container">
+      <h1 class="welcome__welcome">Welcome</h1>
+      <div class="welcome__text_container">
+        <h3 class="welcome__header">Welcome to </br>Arch Studio</h3>
+        <p class="welcome__text">
+          We have a unique network and skillset to help bring your projects to life. Our small team of highly skilled
+          individuals combined with our large network put us in a strong position to deliver exceptional results.
+        </p>
+        <p class="welcome__text">Over the past 10 years, we have worked on all kinds of projects. From stations to high-rise buildings, we
+          create spaces that inspire and delight.</p>
+        <p class="welcome__text">We work closely with our clients so that we understand the intricacies of each project. This allows us to
+          work in harmony the surrounding area to create truly stunning projects that will stand the test of time.</p>
+      </div>
+      <img src="./assets/home/desktop/image-welcome.jpg" class="welcome__image" alt="window building">
+    </div>
     <section class="ideas">
       <picture>
         <source media="(min-width:1200px)" srcset="./assets/home/desktop/image-small-team.jpg" />
