add contact form

--- a/contact.html
+++ b/contact.html
@@ -104,6 +104,30 @@
         <img src="./assets/contact/mobile/image-map.png" alt="map">
       </picture>
     </section>
+    <section class="container contact__form ">
+      <h3>Connect with us</h3>
+      <form class="form">
+        <div class="form__item">
+          <label for="name"></label>
+          <input type="text" placeholder="Name">
+        </div>
+        <div class="form__item">
+          <label for="email"></label>
+          <input type="email" placeholder="Email">
+        </div>
+        <div class="form__item">
+          <label for="Message"></label>
+        <textarea type="text" placeholder="Message" rows="3"></textarea>
+        </div>
+        <button>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 18" width="24" height="18">
+            <g fill="none" fill-rule="evenodd" stroke="#FFFFFF" stroke-width="2">
+              <path d="M15 1l9 9-9 9M0 10h24" />
+            </g>
+          </svg>
+        </button>
+      </form>
+    </section>
     <footer class="footer">
       <div class="footer__container">
         <div class="footer__logo">
