--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <main>
-      <header class="header">
+      <header class="header sticky">
         <div class="overlay"></div>
         <nav class="header__nav container">
           <p class="header__route">
