--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
 <body>
   <main>
-    <header class="header">
+    <header class="header sticky">
       <div class="overlay"></div>
       <nav class="header__nav container">
         <p class="header__route">
